<resources>
    <string name="app_name">ToolMate</string>
    <string name="title_downloader">Downloader</string>
    <string name="title_history">History</string>
    <string name="Download">Download</string>
    <string name="Hint">Paste Link Here</string>
    <string name="get_media">Get Media</string>
    <string name="media">Media</string>
    <string name="title">Title : </string>
    <string name="duration">Duration : </string>
    <string name="title_media">Title Name</string>
    <string name="duration_media">Media Duration</string>
    <!-- Menu Aplikasi -->
    <string name="apps_name">Nama Aplikasi</string>
    <string name="appicons_name">Ini Gambar</string>
    <!-- String History -->
    <string name="media_name">Nama Media</string>
    <string name="tanggal_download">Tanggal Download</string>
    <!-- Dialog Save As -->
    <string name="dialog_title">Save As</string>
    <string name="dialog_hint">File Name</string>
    <!-- Dialog Delete -->
    <string name="link">Link: </string>
    <string name="link_download">https://www.example.com</string>
    <string name="confirmation_delete">Are you sure you want to delete this item history?</string>
    <!-- Top App Bar Menu -->
    <string name="account_menu">Account</string>
    <string name="sign_out">Sign Out</string>">
    <!-- Login Menu -->
    <string name="login_welcome">Welcome to Toolmate, Please Login to continue or sign up</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_continue_as_guset"><u>Continue as Guest</u></string>
    <string name="logo_welcome">https://media.tenor.com/8HfKtIOGnj8AAAAi/lobotomy-corporation.gif</string>
    <string name="logo_welcome_register">https://img1.picmix.com/output/stamp/normal/4/0/7/8/2598704_a7115.gif</string>


    <string-array name="data_apps">
        <item>Youtube</item>
        <item>Instagram</item>
        <item>Tiktok</item>
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Threads</item>
        <item>SnackVideo</item>
        <item>Bstation</item>
    </string-array>

    <string-array name="data_appicons">
        <item>https://www.freepnglogos.com/uploads/youtube-logo-icon-transparent---32.png</item>
        <item>https://www.notebookcheck.net/fileadmin/Notebooks/News/_nc3/Instagram_Logo_png.png</item>
        <item>https://alexandros.jp/s3/skiyaki/uploads/link/image/48005/TikTok_Icon_Black_Circle.png</item>
        <item>https://i.pinimg.com/originals/82/a4/c9/82a4c9bd2c4e1708c2a0b8fd6a96c8da.png</item>
        <item>https://myamazonguy.com/wp-content/uploads/2022/04/Facebook_f_logo_2021.svg.png</item>
        <item>https://www.freelogovectors.net/wp-content/uploads/2023/07/threads-logo-01-freelogovectors.net_.png</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/b/bc/Snack_Video.png</item>
        <item>https://img.icons8.com/color/452/bilibili.png</item>
    </string-array>
</resources>