<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_selectable_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/confirmation_delete"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:layout_marginEnd="6dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_link_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_download"
            android:textIsSelectable="true"
            android:autoLink="web"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>
